Fix the margin and scrollbar glitches
Trap margins in page with border
Use flexbox instead of min-height to get around bug(?)
Min-height 100% doesn't work if body is also min-height but
flex-grow does work

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,16 +9,26 @@ $emphasis: #1d2edb;
 $dark-emphasis: #a2ff00;
 $font-default: arial, serif;
 $font-code: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono;
+* {
+    overflow-anchor: none;
+    font-family: inherit;
+    box-sizing: inherit;
+}
 html {
-    margin: 0;
-    body {
+    box-sizing: border-box;
+    font-family: $font-default;
+    height: 100%;
+    overflow-y: scroll;
+    &, body {
         margin: 0;
-        overflow-y: scroll;
-        font-family: $font-default;
-        box-sizing: border-box;
-        * {
-            font-family: inherit;
-            box-sizing: inherit;
+    }
+    body {
+        min-height: 100%;
+        display: flex;
+        flex-flow: row;
+        @media (min-width: $mobile-width) {
+            padding-top: 0.5vh;
+            padding-bottom: 0.5vh;
         }
         background: $bg-color;
         &.dark-theme {
@@ -72,14 +82,15 @@ html {
             }
         }
         .page {
+            flex-grow: 1;
+            margin: 0 auto;
+            min-height: 100%;
+            border: 1px solid black;
             @media (min-width: $mobile-width){
                 max-width: 60%;
-                margin: auto;
             }
-            min-height: 99vh;
             padding-left: 10px;
             padding-right: 10px;
-            margin: 0;
             background: $page-color;
             @at-root body.dark-theme .page {
                 background: $page-color-dark;
